# UBT-Robot-vision

./: .gitignore  README.md  requirements.txt
image_ws/: run_all.sh  save_images.py  test_import.py
image_ws/src/image_inverter/: package.xml  setup.cfg  setup.py
image_ws/src/image_inverter/image_inverter/: depth_to_pointcloud_node.py  fusion_node.py  helmet_detector_base.py  helmet_tf_transformer.py  helmet_tracker.py  helmet_tracker_node.py  imagesaver.py  kalman_filter_node.py  object_counter_node.py  secondary_verifier_node.py
image_ws/src/image_inverter_interfaces/: CMakeLists.txt  package.xml
image_ws/src/image_inverter_interfaces/srv/: CountObjects.srv  TriggerVerification.srv
imagepipeline_conda/ImagePipeline/: .gitignore  requirements.txt
imagepipeline_conda/ImagePipeline/Cutie/: scripting_demo_add_del_objects.py
imagepipeline_conda/ImagePipeline/Cutie/cutie/model/: big_modules.py  modules.py  train_wrapper.py
imagepipeline_conda/ImagePipeline/Cutie/cutie/utils/: download_models.py
imagepipeline_conda/ImagePipeline/imagepipeline/: imagepipeline_test_qwen.py  machine_counts.json  utils.py  worker_counts.json
pcd_store/: helmet_cloud.pcd  run_save_pcd.sh  save_pcd.py
vision_ws/src/ImagePipeline/: README.md  setup.py
vision_ws/src/ImagePipeline/Cutie/: README.md  scripting_demo.py
vision_ws/src/ImagePipeline/Cutie/cutie/: eval_vos.py
vision_ws/src/ImagePipeline/Cutie/cutie/model/: cutie.py
vision_ws/src/ImagePipeline/Cutie/cutie/model/transformer/: object_summarizer.py
vision_ws/src/ImagePipeline/imagepipeline/: imagepipeline.py  imagepipeline_test_qwen.py  imagepipeline_test_sam2&cutie.py  model_adapters.py  utils_bak.py
vision_ws/src/image_pipeline_ros/: package.xml  setup.cfg  setup.py
vision_ws/src/image_pipeline_ros/image_pipeline_ros/: image_pipeline_node.py
